tests/NormalTests/paczka1/small_fuzzy/39989212.err
Error in line 3: 6Roh2EKCf5 A194 40,1
Error in line 8: AZNq00vx A194 69,6
